# aio-pika-practice

./: pyproject.toml
aio_pika_practice/: consumer.py  publisher.py
tests/: test_aio_pika_practice.py
