[tool.poetry]
name = "aio_pika_practice"
version = "0.1.0"
description = ""
authors = ["Skylar Kerzner <skerzner@community.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aio_pika = "^6.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
